--- a/lawconnect/public/index.html
+++ b/lawconnect/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -11,6 +11,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap');
     </style>
+    <script src="https://kit.fontawesome.com/17387ffb5f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" src="../src/App.css">
     <link rel="icon" type="image/svg" href="/assets/logos/LawConnect-lcon-RGB.svg">
     <title>LawConnect</title>
